feat: :sparkles: 路由守卫使用进度条

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,10 @@
 @use "./reset";
+
+.app-container {
+  padding: 15px;
+}
+
+// 进度条颜色
+#nprogress .bar {
+  background-color: var(--el-color-primary);
+}
